// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Tabs/Tab Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="TabsList_tabList__vWYZt  "
         role="tablist"
         tabindex="-1"
    >
      <button id="ds-tab-id-:r0:-tab1"
              class="TabsTab_tab__W3ulY   TabsTab_tab_active__RkJBU  "
              role="tab"
              tabindex="0"
              aria-selected="true"
              aria-controls="ds-tab-panel-:r0:-tab1"
      >
        TabText
      </button>
      <button id="ds-tab-id-:r0:-tab2"
              class="TabsTab_tab__W3ulY     "
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r0:-tab2"
      >
        Bedrift
      </button>
    </div>
    <div id="ds-tab-panel-:r0:-tab1"
         class="TabsPanel_panel__4lPgj TabsPanel_panel_active__pqi5b "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r0:-tab1"
    >
      Tabs.Panel Person
    </div>
    <div id="ds-tab-panel-:r0:-tab2"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r0:-tab2"
    >
      Tabs.Panel Bedrift
    </div>
  </div>
</div>
`;

exports[`Tester/Tabs/Tab WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="TabsList_tabList__vWYZt  "
         role="tablist"
         tabindex="-1"
    >
      <button id="ds-tab-id-:r1:-tab1"
              class="TabsTab_tab__W3ulY   TabsTab_tab_active__RkJBU  dummyClassname"
              lang="nb"
              data-testid="123ID"
              role="tab"
              tabindex="0"
              aria-selected="true"
              aria-controls="ds-tab-panel-:r1:-tab1"
      >
        Person
      </button>
      <button id="ds-tab-id-:r1:-tab2"
              class="TabsTab_tab__W3ulY     dummyClassname"
              lang="nb"
              data-testid="123ID"
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r1:-tab2"
      >
        Bedrift
      </button>
      <button id="ds-tab-id-:r1:-tab3"
              class="TabsTab_tab__W3ulY     dummyClassname"
              lang="nb"
              data-testid="123ID"
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r1:-tab3"
      >
        Astronaut
      </button>
    </div>
    <div id="ds-tab-panel-:r1:-tab1"
         class="TabsPanel_panel__4lPgj TabsPanel_panel_active__pqi5b "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r1:-tab1"
    >
      Tabs.Panel Person
    </div>
    <div id="ds-tab-panel-:r1:-tab2"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r1:-tab2"
    >
      Tabs.Panel Bedrift
    </div>
    <div id="ds-tab-panel-:r1:-tab3"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r1:-tab3"
    >
      Tabs.Panel Astronaut
    </div>
  </div>
</div>
`;

exports[`Tester/Tabs/Tab WithBorder smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="TabsList_tabList__vWYZt  "
         role="tablist"
         tabindex="-1"
    >
      <button id="ds-tab-id-:ra:-tab1"
              class="TabsTab_tab__W3ulY  TabsTab_tab_border__MtJfT TabsTab_tab_active__RkJBU TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="0"
              aria-selected="true"
              aria-controls="ds-tab-panel-:ra:-tab1"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
          </path>
        </svg>
        Person
      </button>
      <button id="ds-tab-id-:ra:-tab2"
              class="TabsTab_tab__W3ulY  TabsTab_tab_border__MtJfT  TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:ra:-tab2"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm6-9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10a2 2 0 0 1 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
          </path>
        </svg>
        Bedrift
      </button>
    </div>
    <div id="ds-tab-panel-:ra:-tab1"
         class="TabsPanel_panel__4lPgj TabsPanel_panel_active__pqi5b "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:ra:-tab1"
    >
      Tabs.Panel Person
    </div>
    <div id="ds-tab-panel-:ra:-tab2"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:ra:-tab2"
    >
      Tabs.Panel Bedrift
    </div>
  </div>
</div>
`;

exports[`Tester/Tabs/Tab WithIcon play-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="TabsList_tabList__vWYZt  "
         role="tablist"
         tabindex="-1"
    >
      <button id="ds-tab-id-:r2:-tab1"
              class="TabsTab_tab__W3ulY   TabsTab_tab_active__RkJBU TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="0"
              aria-selected="true"
              aria-controls="ds-tab-panel-:r2:-tab1"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
          </path>
        </svg>
        Person
      </button>
      <button id="ds-tab-id-:r2:-tab2"
              class="TabsTab_tab__W3ulY    TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r2:-tab2"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm6-9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10a2 2 0 0 1 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
          </path>
        </svg>
        Bedrift
      </button>
      <button id="ds-tab-id-:r2:-tab3"
              class="TabsTab_tab__W3ulY    TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r2:-tab3"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m2.19 19.169 4.09-4.08c-.21-.3-.36-.62-.45-.97l-3.64 3.64v1.41Zm0 2.83H3.6l4.77-4.76-1.42-1.41-4.76 4.76v1.41Zm4.24 0 3.64-3.64c-.34-.09-.67-.24-.97-.45l-4.08 4.09h1.41Zm2.64-5.47-1.41-1.41 1.41 1.41Zm5.66-7.07c-.78-.78-.78-2.05 0-2.83.78-.78 2.05-.78 2.83 0 .77.78.78 2.05 0 2.83-.78.78-2.05.78-2.83 0Zm7.07-7.07S16.85.268 11.19 5.929c-2.19 2.19-3.5 4.6-4.35 6.71-.28.75-.09 1.57.46 2.13l2.13 2.12c.55.56 1.37.74 2.12.46a19.1 19.1 0 0 0 6.71-4.35c5.66-5.66 3.54-10.61 3.54-10.61ZM5.83 12.499 2 10.869l6.1-2.77c-.91 1.36-1.69 2.83-2.27 4.4Zm7.49 9.69-1.63-3.83c1.57-.58 3.04-1.36 4.4-2.27l-2.77 6.1Z">
          </path>
        </svg>
        Astronaut
      </button>
    </div>
    <div id="ds-tab-panel-:r2:-tab1"
         class="TabsPanel_panel__4lPgj TabsPanel_panel_active__pqi5b "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r2:-tab1"
    >
      Tabs.Panel Person
    </div>
    <div id="ds-tab-panel-:r2:-tab2"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r2:-tab2"
    >
      Tabs.Panel Bedrift
    </div>
    <div id="ds-tab-panel-:r2:-tab3"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r2:-tab3"
    >
      Tabs.Panel Astronaut
    </div>
  </div>
  <div class>
    <div class="TabsList_tabList__vWYZt  "
         role="tablist"
         tabindex="-1"
    >
      <button id="ds-tab-id-:r6:-tab1"
              class="TabsTab_tab__W3ulY TabsTab_tab_compact__iTTkr  TabsTab_tab_active__RkJBU TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="0"
              aria-selected="true"
              aria-controls="ds-tab-panel-:r6:-tab1"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 4a4 4 0 1 1 0 8 4 4 0 0 1 0-8Zm0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z">
          </path>
        </svg>
        Person 2
      </button>
      <button id="ds-tab-id-:r6:-tab2"
              class="TabsTab_tab__W3ulY TabsTab_tab_compact__iTTkr   TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r6:-tab2"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm6-9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10a2 2 0 0 1 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
          </path>
        </svg>
        Bedrift 2
      </button>
      <button id="ds-tab-id-:r6:-tab3"
              class="TabsTab_tab__W3ulY TabsTab_tab_compact__iTTkr   TabsTab_tab_icon__pamQC "
              role="tab"
              tabindex="-1"
              aria-selected="false"
              aria-controls="ds-tab-panel-:r6:-tab3"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="m2.19 19.169 4.09-4.08c-.21-.3-.36-.62-.45-.97l-3.64 3.64v1.41Zm0 2.83H3.6l4.77-4.76-1.42-1.41-4.76 4.76v1.41Zm4.24 0 3.64-3.64c-.34-.09-.67-.24-.97-.45l-4.08 4.09h1.41Zm2.64-5.47-1.41-1.41 1.41 1.41Zm5.66-7.07c-.78-.78-.78-2.05 0-2.83.78-.78 2.05-.78 2.83 0 .77.78.78 2.05 0 2.83-.78.78-2.05.78-2.83 0Zm7.07-7.07S16.85.268 11.19 5.929c-2.19 2.19-3.5 4.6-4.35 6.71-.28.75-.09 1.57.46 2.13l2.13 2.12c.55.56 1.37.74 2.12.46a19.1 19.1 0 0 0 6.71-4.35c5.66-5.66 3.54-10.61 3.54-10.61ZM5.83 12.499 2 10.869l6.1-2.77c-.91 1.36-1.69 2.83-2.27 4.4Zm7.49 9.69-1.63-3.83c1.57-.58 3.04-1.36 4.4-2.27l-2.77 6.1Z">
          </path>
        </svg>
        Astronaut 2
      </button>
    </div>
    <div id="ds-tab-panel-:r6:-tab1"
         class="TabsPanel_panel__4lPgj TabsPanel_panel_active__pqi5b "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r6:-tab1"
    >
      Tabs.Panel Person 2, variant compact
    </div>
    <div id="ds-tab-panel-:r6:-tab2"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r6:-tab2"
    >
      Tabs.Panel Bedrift 2, variant compact
    </div>
    <div id="ds-tab-panel-:r6:-tab3"
         class="TabsPanel_panel__4lPgj  "
         role="tabpanel"
         aria-labelledby="ds-tab-id-:r6:-tab3"
    >
      Tabs.Panel Astronaut 2, variant compact
    </div>
  </div>
</div>
`;
